[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/open_kanban/res/box/inner_pressed.tres" type="StyleBox" id=1]
[ext_resource path="res://addons/open_kanban/res/fonts/regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/open_kanban/res/fonts/light.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/open_kanban/res/images/ui/darg.png" type="Texture" id=4]
[ext_resource path="res://addons/open_kanban/res/box/inner.tres" type="StyleBox" id=5]
[ext_resource path="res://addons/open_kanban/res/images/ui/settings.png" type="Texture" id=6]
[ext_resource path="res://addons/open_kanban/system/drag_component.gd" type="Script" id=7]
[ext_resource path="res://addons/open_kanban/system/list.gd" type="Script" id=8]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0.352941, 0.352941, 0.352941, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="list" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.5
margin_top = -63.0
margin_right = 122.5
margin_bottom = 63.0
rect_min_size = Vector2( 245, 0 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 3
custom_constants/separation = 6
script = ExtResource( 8 )

[node name="tab" type="HBoxContainer" parent="."]
margin_right = 245.0
margin_bottom = 48.0
rect_min_size = Vector2( 240, 48 )
custom_constants/separation = 6

[node name="drag" type="ToolButton" parent="tab"]
margin_right = 24.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 4
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 5 )
action_mode = 0
keep_pressed_outside = true
flat = false
script = ExtResource( 7 )

[node name="texture" type="TextureRect" parent="tab/drag"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="title" type="MarginContainer" parent="tab"]
margin_left = 30.0
margin_right = 213.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="line_edit" type="LineEdit" parent="tab/title"]
visible = false
margin_right = 183.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/read_only = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
max_length = 24
clear_button_enabled = true
placeholder_text = "未命名"

[node name="label" type="Label" parent="tab/title"]
margin_right = 183.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.352941, 0.352941, 0.352941, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
valign = 1
autowrap = true

[node name="button" type="ToolButton" parent="tab/title"]
margin_right = 183.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="num" type="Label" parent="tab"]
margin_left = 219.0
margin_right = 227.0
margin_bottom = 48.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0.352941, 0.352941, 0.352941, 1 )
text = "0"
align = 1
valign = 1

[node name="settings" type="TextureButton" parent="tab"]
margin_left = 233.0
margin_top = 14.0
margin_right = 245.0
margin_bottom = 34.0
size_flags_vertical = 4
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )

[node name="container" type="PanelContainer" parent="."]
margin_top = 54.0
margin_right = 245.0
margin_bottom = 126.0
rect_min_size = Vector2( 245, 72 )
custom_styles/panel = SubResource( 13 )

[node name="vbox" type="VBoxContainer" parent="container"]
margin_left = 12.0
margin_top = 12.0
margin_right = 233.0
margin_bottom = 60.0
custom_constants/separation = 6

[node name="add" type="PanelContainer" parent="container/vbox"]
margin_right = 221.0
margin_bottom = 48.0
rect_min_size = Vector2( 221, 48 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 5 )

[node name="card_title" type="LineEdit" parent="container/vbox/add"]
margin_left = 12.0
margin_top = 12.0
margin_right = 209.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_uneditable = Color( 1, 1, 1, 0 )
custom_fonts/font = ExtResource( 3 )
custom_styles/read_only = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
max_length = 96
clear_button_enabled = true
placeholder_text = "+ 添加卡片"

[connection signal="text_entered" from="tab/title/line_edit" to="." method="_on_line_edit_text_entered"]
[connection signal="pressed" from="tab/title/button" to="." method="title_edit"]
[connection signal="sort_children" from="container/vbox" to="." method="_on_vbox_sort_children"]
[connection signal="text_entered" from="container/vbox/add/card_title" to="." method="_on_card_title_text_entered"]
